--- a/src/panda_moveit_config/config/sensors_d435_pointcloud.yaml
+++ b/src/panda_moveit_config/config/sensors_d435_pointcloud.yaml
@@ -6,5 +6,5 @@ sensors:
     padding_offset: 0.1
     padding_scale: 1.0
     max_update_rate: 1.0
-    # filtered_cloud_topic: filtered_cloud
+    filtered_cloud_topic: filtered_cloud
     # ns: d435Camera1
