--- a/src/panda_moveit/package.xml
+++ b/src/panda_moveit/package.xml
@@ -49,6 +49,8 @@
   <depend>realsense_gazebo_description</depend>
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
+  <depend>actionlib</depend>
+  <depend>franka_gripper</depend>
 
   <!-- <depend>python-o3d</depend> -->
   <!-- <depend>realsense2_description</depend> -->
