new package create (panda_physical)

--- a/src/panda_moveit/package.xml
+++ b/src/panda_moveit/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The panda_moveit package</description>
 
-  <maintainer email="thouardkai@gmail.com">user</maintainer>
+  <maintainer email="thouardkai@gmail.com">Kai Thouard</maintainer>
 
   <license>TODO</license>
 
